syntax ="proto3";
import "google/protobuf/any.proto";
package shared.v1;



message FilterParam {
    string field = 1;
    google.protobuf.Any value = 2;
}