syntax ="proto3";

package shared.v1;

message PaginationParam {
    int32 page = 1;
    int32 size = 2;
}
message PaginationMeta {
    int32 current_page = 1;
    int32 page_size = 2;
    int32 total_page = 3;
    int32 total_element = 4;
}